initial commit: internal developer platform cdk infrastructure
aws cdk infrastructure for deploying a complete internal developer platform on eks:

core platform:
- backstage developer portal with rds postgres
- argocd for gitops with github sso via dex
- argo workflows for ci/cd pipelines
- argo events for event-driven automation
- argo rollouts for progressive delivery

infrastructure:
- eks cluster with karpenter autoscaling
- external secrets operator with aws secrets manager
- cert-manager for tls certificates
- kyverno for policy enforcement
- aws load balancer controller with alb ingress
- external-dns for route53 integration
- grafana for observability dashboards

architecture:
- nested cdk stacks for modular deployment
- mustache templates for helm values
- irsa for secure aws api access
- sso integration across argo tools via argocd dex

--- a/helm/chart/backstage/templates/configmap.yaml
+++ b/helm/chart/backstage/templates/configmap.yaml
@@ -31,6 +31,10 @@ data:
           user: ${POSTGRES_USER}
           password: ${POSTGRES_PASSWORD}
           database: {{ .Values.database.name }}
+          ssl:
+            rejectUnauthorized: true
+            ca:
+              $file: /etc/ssl/certs/rds-ca-bundle.pem
 
     auth:
       environment: {{ .Values.environment }}
