--- a/helm/chart/backstage/templates/deployment.yaml
+++ b/helm/chart/backstage/templates/deployment.yaml
@@ -6,6 +6,11 @@ metadata:
     {{- include "common.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicas }}
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       {{- include "backstage.selectorLabels" . | nindent 6 }}
@@ -24,6 +29,7 @@ spec:
         - name: backstage
           image: "{{ .Values.image.uri }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          command: ["node", "packages/backend", "--config", "app-config.yaml", "--config", "app-config.production.yaml", "--config", "/app/config/app-config.yaml"]
           ports:
             - name: http
               containerPort: 7007
@@ -67,19 +73,10 @@ spec:
             timeoutSeconds: 5
             failureThreshold: 6
           volumeMounts:
-            - name: backstage-secrets
-              mountPath: /app/secrets
-              readOnly: true
             - name: backstage-config
               mountPath: /app/config
               readOnly: true
       volumes:
-        - name: backstage-secrets
-          csi:
-            driver: secrets-store.csi.k8s.io
-            readOnly: true
-            volumeAttributes:
-              secretProviderClass: {{ include "backstage.fullname" . }}-secretprovider
         - name: backstage-config
           configMap:
             name: {{ include "backstage.fullname" . }}-config
