--- a/helm/chart/backstage/values.yaml
+++ b/helm/chart/backstage/values.yaml
@@ -1,7 +1,3 @@
-# Default values for backstage.
-# This is a YAML-formatted file.
-# Values are overridden by mustache template processing.
-
 platformId: ""
 deploymentId: ""
 account: ""
@@ -18,7 +14,7 @@ image:
   tag: latest
   pullPolicy: Always
 
-replicas: 2
+replicas: 1
 
 resources:
   requests:
@@ -68,3 +64,27 @@ serviceAccount:
   annotations: {}
 
 env: []
+
+autoscaling:
+  enabled: true
+  minReplicas: 2
+  maxReplicas: 4
+  targetCPUUtilizationPercentage: 70
+  targetMemoryUtilizationPercentage: 80
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 300
+      policies:
+        - type: Pods
+          value: 1
+          periodSeconds: 60
+    scaleUp:
+      stabilizationWindowSeconds: 60
+      policies:
+        - type: Pods
+          value: 2
+          periodSeconds: 60
+
+podDisruptionBudget:
+  enabled: true
+  minAvailable: 1
