--- a/.github/workflows/test-and-analyze.yml
+++ b/.github/workflows/test-and-analyze.yml
@@ -17,36 +17,60 @@ permissions:
   issues: write
 
 jobs:
+  build-cdk-common:
+    name: Build CDK Common Dependencies
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout CDK Common
+        uses: actions/checkout@v4
+        with:
+          repository: fast-ish/cdk-common
+          path: cdk-common
+          ref: main
+
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'corretto'
+          cache: maven
+
+      - name: Build and install cdk-common
+        run: |
+          cd cdk-common
+          mvn clean install -DskipTests -B
+
+      - name: Upload cdk-common artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: cdk-common-build
+          path: ~/.m2/repository/fastish/cdk-common/
+          retention-days: 1
+
   build-and-test:
+    needs: build-cdk-common
     name: build and test
     runs-on: ubuntu-latest
 
     steps:
       - name: checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for better analysis
 
       - name: set up jdk ${{ env.JAVA_VERSION }}
-        uses: actions/setup-java@v5
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ env.JAVA_VERSION }}
           distribution: ${{ env.JAVA_DISTRIBUTION }}
           cache: maven
 
-      - name: cache maven dependencies
-        uses: actions/cache@v4
+      - name: Download cdk-common artifacts
+        uses: actions/download-artifact@v4
         with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-
-      - name: build cdk-common dependency
-        run: |
-          git clone https://github.com/fast-ish/cdk-common.git /tmp/cdk-common
-          cd /tmp/cdk-common
-          mvn clean install -DskipTests -B
+          name: cdk-common-build
+          path: ~/.m2/repository/
 
       - name: compile project
         run: mvn clean compile -B
@@ -65,34 +89,35 @@ jobs:
 
       - name: upload test results
         if: always()
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v4
         with:
           name: test-results
           path: target/surefire-reports/
           retention-days: 7
 
   code-coverage:
+    needs: build-cdk-common
     name: code coverage analysis
     runs-on: ubuntu-latest
 
     steps:
       - name: checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: set up jdk ${{ env.JAVA_VERSION }}
-        uses: actions/setup-java@v5
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ env.JAVA_VERSION }}
           distribution: ${{ env.JAVA_DISTRIBUTION }}
           cache: maven
 
-      - name: build cdk-common dependency
-        run: |
-          git clone https://github.com/fast-ish/cdk-common.git /tmp/cdk-common
-          cd /tmp/cdk-common
-          mvn clean install -DskipTests -B
+      - name: Download cdk-common artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: cdk-common-build
+          path: ~/.m2/repository/
 
       - name: run tests with JaCoCo coverage
         run: mvn clean test jacoco:report -B || true
@@ -109,7 +134,7 @@ jobs:
         continue-on-error: true
 
       - name: upload jacoco coverage report
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v4
         with:
           name: jacoco-report
           path: target/site/jacoco/
@@ -138,25 +163,26 @@ jobs:
             });
 
   spotbugs-analysis:
+    needs: build-cdk-common
     name: spotbugs static analysis
     runs-on: ubuntu-latest
 
     steps:
       - name: checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
 
       - name: set up jdk ${{ env.JAVA_VERSION }}
-        uses: actions/setup-java@v5
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ env.JAVA_VERSION }}
           distribution: ${{ env.JAVA_DISTRIBUTION }}
           cache: maven
 
-      - name: build cdk-common dependency
-        run: |
-          git clone https://github.com/fast-ish/cdk-common.git /tmp/cdk-common
-          cd /tmp/cdk-common
-          mvn clean install -DskipTests -B
+      - name: Download cdk-common artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: cdk-common-build
+          path: ~/.m2/repository/
 
       - name: run spotbugs analysis
         run: |
@@ -165,7 +191,7 @@ jobs:
 
       - name: upload spotbugs report
         if: always()
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v4
         with:
           name: spotbugs-report
           path: target/spotbugsXml.xml
@@ -179,25 +205,26 @@ jobs:
           name: spotbugs
 
   pmd-analysis:
+    needs: build-cdk-common
     name: pmd static analysis
     runs-on: ubuntu-latest
 
     steps:
       - name: checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
 
       - name: set up jdk ${{ env.JAVA_VERSION }}
-        uses: actions/setup-java@v5
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ env.JAVA_VERSION }}
           distribution: ${{ env.JAVA_DISTRIBUTION }}
           cache: maven
 
-      - name: build cdk-common dependency
-        run: |
-          git clone https://github.com/fast-ish/cdk-common.git /tmp/cdk-common
-          cd /tmp/cdk-common
-          mvn clean install -DskipTests -B
+      - name: Download cdk-common artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: cdk-common-build
+          path: ~/.m2/repository/
 
       - name: run pmd analysis
         run: |
@@ -206,7 +233,7 @@ jobs:
 
       - name: upload pmd report
         if: always()
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v4
         with:
           name: pmd-report
           path: |
@@ -223,32 +250,33 @@ jobs:
         continue-on-error: true
 
   checkstyle-analysis:
+    needs: build-cdk-common
     name: checkstyle analysis
     runs-on: ubuntu-latest
 
     steps:
       - name: checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
 
       - name: set up jdk ${{ env.JAVA_VERSION }}
-        uses: actions/setup-java@v5
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ env.JAVA_VERSION }}
           distribution: ${{ env.JAVA_DISTRIBUTION }}
           cache: maven
 
-      - name: build cdk-common dependency
-        run: |
-          git clone https://github.com/fast-ish/cdk-common.git /tmp/cdk-common
-          cd /tmp/cdk-common
-          mvn clean install -DskipTests -B
+      - name: Download cdk-common artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: cdk-common-build
+          path: ~/.m2/repository/
 
       - name: run checkstyle
         run: mvn clean checkstyle:checkstyle -B || true
 
       - name: upload checkstyle report
         if: always()
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v4
         with:
           name: checkstyle-report
           path: target/checkstyle-result.xml
@@ -268,10 +296,10 @@ jobs:
 
     steps:
       - name: checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
 
       - name: set up jdk ${{ env.JAVA_VERSION }}
-        uses: actions/setup-java@v5
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ env.JAVA_VERSION }}
           distribution: ${{ env.JAVA_DISTRIBUTION }}
@@ -290,32 +318,33 @@ jobs:
 
       - name: upload dependency check results
         if: always()
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v4
         with:
           name: dependency-check-report
           path: reports/
           retention-days: 7
 
   dependency-analysis:
+    needs: build-cdk-common
     name: maven dependency analysis
     runs-on: ubuntu-latest
 
     steps:
       - name: checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
 
       - name: set up jdk ${{ env.JAVA_VERSION }}
-        uses: actions/setup-java@v5
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ env.JAVA_VERSION }}
           distribution: ${{ env.JAVA_DISTRIBUTION }}
           cache: maven
 
-      - name: build cdk-common dependency
-        run: |
-          git clone https://github.com/fast-ish/cdk-common.git /tmp/cdk-common
-          cd /tmp/cdk-common
-          mvn clean install -DskipTests -B
+      - name: Download cdk-common artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: cdk-common-build
+          path: ~/.m2/repository/
 
       - name: analyze dependencies
         run: |
